Switch to `login.dfe.kue` fork of `kue` since `kue` is no longer being maintained.

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "homepage": "https://github.com/DFE-Digital/login.dfe.service-notifications.jobs.client#readme",
   "dependencies": {
-    "kue": "^0.11.6"
+    "login.dfe.kue": "github:DFE-Digital/login.dfe.kue#v0.12.0"
   },
   "devDependencies": {
     "eslint": "^8.14.0",
